--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "author": "Namardeep Sood",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "response-time": "^2.3.2"
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.7",
+    "response-time": "^2.3.2",
+    "swagger-jsdoc": "^4.2.0",
+    "swagger-ui-express": "^4.1.4"
   }
 }
