--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "@hapi/joi": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
     "response-time": "^2.3.2",
